// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CatView/> > should load more cat images when clicking in load more button 1`] = `
<div>
  <div
    class="_catViewContainer_aa2a11"
  >
    <div
      class="_titlesContainer_aa2a11"
    >
      <h2
        class="ant-typography _breedInfoTitle_aa2a11 css-dev-only-do-not-override-1kf000u"
      >
        Cats
      </h2>
      <h3
        class="ant-typography _breedInfoTitle_aa2a11 css-dev-only-do-not-override-1kf000u"
      >
        Explore cat images!
      </h3>
    </div>
    <div
      class="_autoSizerContainer_aa2a11"
    >
      <div
        style="position: relative; height: 1440px; width: 948px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 3500px; width: 900px;"
        >
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 0px; height: 484px; width: 284px;"
          >
            <a
              href="/6gc"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/6gc.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 0px; height: 484px; width: 284px;"
          >
            <a
              href="/auo"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/auo.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 0px; height: 484px; width: 284px;"
          >
            <a
              href="/bit"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/bit.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 516px; height: 484px; width: 284px;"
          >
            <a
              href="/c0d"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/c0d.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 516px; height: 484px; width: 284px;"
          >
            <a
              href="/d7s"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/d7s.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 516px; height: 484px; width: 284px;"
          >
            <a
              href="/dmo"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/dmo.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 1032px; height: 484px; width: 284px;"
          >
            <a
              href="/MTY0NjU4Mg"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/MTY0NjU4Mg.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 1032px; height: 484px; width: 284px;"
          >
            <a
              href="/MTk0Njc0MQ"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/MTk0Njc0MQ.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 1032px; height: 484px; width: 284px;"
          >
            <a
              href="/0eVXT8_lb"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/0eVXT8_lb.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 1548px; height: 484px; width: 284px;"
          >
            <a
              href="/oLtx9gsxx"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/oLtx9gsxx.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 1548px; height: 484px; width: 284px;"
          >
            <a
              href="/6gc"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/6gc.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 1548px; height: 484px; width: 284px;"
          >
            <a
              href="/auo"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/auo.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_loadMoreButtonContainer_aa2a11"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-primary ant-btn-color-primary ant-btn-variant-solid _loadMoreButton_aa2a11"
        type="button"
      >
        <span>
          Load more
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<CatView/> > should render correctly 1`] = `
<div>
  <div
    class="_catViewContainer_aa2a11"
  >
    <div
      class="_titlesContainer_aa2a11"
    >
      <h2
        class="ant-typography _breedInfoTitle_aa2a11 css-dev-only-do-not-override-1kf000u"
      >
        Cats
      </h2>
      <h3
        class="ant-typography _breedInfoTitle_aa2a11 css-dev-only-do-not-override-1kf000u"
      >
        Explore cat images!
      </h3>
    </div>
    <div
      class="_autoSizerContainer_aa2a11"
    >
      <div
        style="position: relative; height: 1440px; width: 948px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 2000px; width: 900px;"
        >
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 0px; height: 484px; width: 284px;"
          >
            <a
              href="/6gc"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/6gc.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 0px; height: 484px; width: 284px;"
          >
            <a
              href="/auo"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/auo.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 0px; height: 484px; width: 284px;"
          >
            <a
              href="/bit"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/bit.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 516px; height: 484px; width: 284px;"
          >
            <a
              href="/c0d"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/c0d.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 516px; height: 484px; width: 284px;"
          >
            <a
              href="/d7s"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/d7s.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 516px; height: 484px; width: 284px;"
          >
            <a
              href="/dmo"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/dmo.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 1032px; height: 484px; width: 284px;"
          >
            <a
              href="/MTY0NjU4Mg"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/MTY0NjU4Mg.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 1032px; height: 484px; width: 284px;"
          >
            <a
              href="/MTk0Njc0MQ"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/MTk0Njc0MQ.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 1032px; height: 484px; width: 284px;"
          >
            <a
              href="/0eVXT8_lb"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/0eVXT8_lb.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 1548px; height: 484px; width: 284px;"
          >
            <a
              href="/oLtx9gsxx"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1kf000u"
                style="width: 100%; height: 500px; background-image: url(https://cdn2.thecatapi.com/images/oLtx9gsxx.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;"
              >
                <div
                  class="ant-card-body"
                />
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_loadMoreButtonContainer_aa2a11"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-primary ant-btn-color-primary ant-btn-variant-solid _loadMoreButton_aa2a11"
        type="button"
      >
        <span>
          Load more
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<CatView/> > should render correctly in loading state 1`] = `
<div>
  <div
    class="_catViewContainer_aa2a11"
  >
    <div
      class="_titlesContainer_aa2a11"
    >
      <h2
        class="ant-typography _breedInfoTitle_aa2a11 css-dev-only-do-not-override-1kf000u"
      >
        Cats
      </h2>
      <h3
        class="ant-typography _breedInfoTitle_aa2a11 css-dev-only-do-not-override-1kf000u"
      >
        Explore cat images!
      </h3>
    </div>
    <div
      class="_autoSizerContainer_aa2a11"
    >
      <div
        style="position: relative; height: 1440px; width: 948px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 2000px; width: 900px;"
        >
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 0px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 0px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 0px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 516px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 516px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 516px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 1032px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 316px; top: 1032px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 632px; top: 1032px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="grid-item"
            style="position: absolute; left: 0px; top: 1548px; height: 484px; width: 284px;"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-skeleton-image"
                style="width: 284px; height: 500px;"
              >
                <svg
                  class="ant-skeleton-image-svg"
                  viewBox="0 0 1098 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Image placeholder
                  </title>
                  <path
                    class="ant-skeleton-image-path"
                    d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_loadMoreButtonContainer_aa2a11"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-primary ant-btn-color-primary ant-btn-variant-solid _loadMoreButton_aa2a11"
        disabled=""
        type="button"
      >
        <span>
          Load more
        </span>
      </button>
    </div>
  </div>
</div>
`;
